DFG ASSERTION FAILED: m_plan.weakReferences.contains(structure). https://bugs.webkit.org/show_bug.cgi?id=151952

Reviewed by Mark Lam.

Fix a bug revealed by the new ftl-has-a-bad-time.js test. It turns out that our handling of
structures reachable from the compiler wasn't accounting for having a bad time.

* dfg/DFGStructureRegistrationPhase.cpp:
(JSC::DFG::StructureRegistrationPhase::run):



Canonical link: https://commits.webkit.org/170102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193653 268f45cc-cd09-0410-ab3c-d52691b4dbfc