Source/JavaScriptCore/dfg/DFGStructureRegistrationPhase.cpp
@@ -109,8 +109,12 @@ public:
                     
                 case NewArray:
                 case NewArrayBuffer:
-                    registerStructure(m_graph.globalObjectFor(node->origin.semantic)->arrayStructureForIndexingTypeDuringAllocation(node->indexingType()));
+                case NewArrayWithSize: {
+                    JSGlobalObject* globalObject = m_graph.globalObjectFor(node->origin.semantic);
+                    registerStructure(globalObject->arrayStructureForIndexingTypeDuringAllocation(node->indexingType()));
+                    registerStructure(globalObject->originalArrayStructureForIndexingType(ArrayWithSlowPutArrayStorage));
                     break;
+                }
                     
                 case NewTypedArray:
                     registerStructure(m_graph.globalObjectFor(node->origin.semantic)->typedArrayStructure(node->typedArrayType()));
